--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -54,10 +54,6 @@ body {
     list-style: none;
 }
 
-.menu--open .menu__list {
-    overflow-y: scroll;
-}
-
 .menu__link {
     color: #FFFFFF;
     text-decoration: none;
